--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-stage-0": "^6.5.0",
+    "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.23.0",
     "eslint": "^3.3.1",
     "extract-text-webpack-plugin": "^0.9.1",
